--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "ngx-cookie-service": "^20.0.1",
+    "ngx-countup": "^13.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
