--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^20.1.3",
+    "@angular/cdk": "^21.0.2",
     "@angular/common": "^20.1.3",
     "@angular/compiler": "^20.1.3",
     "@angular/core": "^20.1.3",
     "@angular/forms": "^20.1.3",
+    "@angular/material": "^21.0.2",
     "@angular/platform-browser": "^20.1.3",
     "@angular/platform-browser-dynamic": "^20.1.3",
     "@angular/platform-server": "^20.1.3",
