--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.13.1",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "ng": "^0.0.0",
     "ngx-cookie-service": "^21.1.0",
     "ngx-countup": "^13.2.0",
@@ -44,6 +45,7 @@
     "@angular/localize": "^21.0.3",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
