--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "^21.0.3",
     "@angular/forms": "^21.0.3",
     "@angular/material": "^21.0.2",
+    "@angular/material-moment-adapter": "^21.1.4",
     "@angular/platform-browser": "^21.0.3",
     "@angular/platform-browser-dynamic": "^21.0.3",
     "@angular/platform-server": "^21.0.3",
@@ -30,6 +31,7 @@
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "moment": "^2.30.1",
     "ng": "^0.0.0",
     "ngx-cookie-service": "^21.1.0",
     "ngx-countup": "^13.2.0",
